changes last cmt

--- a/bookingPage(4).html
+++ b/bookingPage(4).html
@@ -303,7 +303,7 @@ body {
   right: 130px;
   text-align: center;
   align-items: center;
-   box-shadow: 0 1px 1px 1px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 1px 1px 1px rgba(0, 0, 0, 0.3);
 }
 .mob_det {
   display: none;
@@ -1038,6 +1038,7 @@ body {
     color: #4990e2;
     border-radius: 100px;
     background-color: #fff;
+     box-shadow: 0 1px 1px 1px rgba(0, 0, 0, 0.3);
     
 }
 
@@ -1471,7 +1472,7 @@ carGroupFilter=> used for filtering(not using//can be used) */
 <div class="openKnowMore" id="kn7">
   <div class="priceGrid">
     <div></div>
-    <div><img src="img/road.svg"/></div>
+    <div><img class="roadimg" src="img/road.svg"/></div>
     <div><img class="roadimg" src="img/persentage.png"/></div>
     <div><img class="roadimg" src="img/sgst.png"/></div>
     <div class="roadprice">Price Includes:</div>
@@ -1556,7 +1557,7 @@ carGroupFilter=> used for filtering(not using//can be used) */
   <div class="openKnowMore" id="kn3">
     <div class="priceGrid">
       <div></div>
-      <div><img src="img/road.svg"/></div>
+      <div><img class="roadimg" src="img/road.svg"/></div>
       <div><img class="roadimg" src="img/persentage.png"/></div>
       <div><img class="roadimg" src="img/sgst.png"/></div>
       <div class="roadprice">Price Includes:</div>
@@ -1641,7 +1642,7 @@ carGroupFilter=> used for filtering(not using//can be used) */
     <div class="openKnowMore" id="kn1">
       <div class="priceGrid">
         <div></div>
-        <div><img src="img/road.svg"/></div>
+        <div><img class="roadimg" src="img/road.svg"/></div>
         <div><img class="roadimg" src="img/persentage.png"/></div>
         <div><img class="roadimg" src="img/sgst.png"/></div>
         <div class="roadprice">Price Includes:</div>
@@ -1726,7 +1727,7 @@ carGroupFilter=> used for filtering(not using//can be used) */
       <div class="openKnowMore" id="kn4">
         <div class="priceGrid">
           <div></div>
-          <div><img src="img/road.svg"/></div>
+          <div><img class="roadimg" src="img/road.svg"/></div>
           <div><img class="roadimg" src="img/persentage.png"/></div>
           <div><img class="roadimg" src="img/sgst.png"/></div>
           <div class="roadprice">Price Includes:</div>
@@ -1811,7 +1812,7 @@ carGroupFilter=> used for filtering(not using//can be used) */
         <div class="openKnowMore" id="kn5">
           <div class="priceGrid">
             <div></div>
-            <div><img src="img/road.svg"/></div>
+            <div><img class="roadimg" src="img/road.svg"/></div>
             <div><img class="roadimg" src="img/persentage.png"/></div>
             <div><img class="roadimg" src="img/sgst.png"/></div>
             <div class="roadprice">Price Includes:</div>
