--- a/payment.html
+++ b/payment.html
@@ -2295,7 +2295,8 @@
 
 
     function showcod(){
-        alert("You Need to Pay Booking Amount Before The Date Of Journey Start At The Starting Location")
+        alert("You Need to Pay Booking Amount Before The Date Of Journey Start At The Starting Location");
+        window.location.href="homepg.html"
     }
 
     
