--- a/bookingPage(4).html
+++ b/bookingPage(4).html
@@ -1136,7 +1136,7 @@ carGroupFilter=> used for filtering(not using//can be used) */
 <div id="offers">
       <nav id="navbar">
         <div id="logo">
-          <a href="#"><img src="img/logo-f38397447048ccba047af6980364e92e.svg" alt="Zoom_Car" /></a>
+          <a href="homepg.html"><img src="img/logo-f38397447048ccba047af6980364e92e.svg" alt="Zoom_Car" /></a>
         </div>
         <ul id="nav_ul">
           <!-- <li class="item hov">
