index file name given

--- a/bookingPage(4).html
+++ b/bookingPage(4).html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://kit.fontawesome.com/15707e82f8.js" crossorigin="anonymous"></script>
   <title>booking Car</title>
-  <!-- <link rel="stylesheet" href="homepg.css"> -->
+  <!-- <link rel="stylesheet" href="index.css"> -->
 </head>
 
 <style>
@@ -1136,7 +1136,7 @@ carGroupFilter=> used for filtering(not using//can be used) */
 <div id="offers">
       <nav id="navbar">
         <div id="logo">
-          <a href="homepg.html"><img src="img/logo-f38397447048ccba047af6980364e92e.svg" alt="Zoom_Car" /></a>
+          <a href="index.html"><img src="img/logo-f38397447048ccba047af6980364e92e.svg" alt="Zoom_Car" /></a>
         </div>
         <ul id="nav_ul">
           <!-- <li class="item hov">
@@ -2183,7 +2183,7 @@ function saveData(e) {
   localStorage.setItem("users", JSON.stringify(s_arr));
 
   alert("YOU ARE SUCESSFULLY SIGNUP TO ZOOMCAR");
-  window.location.href = "homepg.html";
+  window.location.href = "index.html";
 }
 
 //LOGIN AFTERCLICK IN POPUP
