--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Zoom Car</title>
   <script src="https://kit.fontawesome.com/15707e82f8.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="homepg.css">
+  <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
@@ -919,4 +919,4 @@
 </body>
 
 </html>
-<script src="homepg.js"></script>
+<script src="index.js"></script>
