--- a/offers.html
+++ b/offers.html
@@ -1042,7 +1042,7 @@ body {
     <div id="offers">
       <nav id="navbar">
         <div id="logo">
-          <a href="homepg.html"><img src="img/logo-f38397447048ccba047af6980364e92e.svg" alt="Zoom_Car" /></a>
+          <a href="index.html"><img src="img/logo-f38397447048ccba047af6980364e92e.svg" alt="Zoom_Car" /></a>
         </div>
         <ul id="nav_ul">
           <li class="item hov">
@@ -1719,7 +1719,7 @@ function saveData(e) {
   localStorage.setItem("users", JSON.stringify(s_arr));
 
   alert("YOU ARE SUCESSFULLY SIGNUP TO ZOOMCAR");
-  window.location.href = "homepg.html";
+  window.location.href = "index.html";
 }
 
 //LOGIN AFTERCLICK IN POPUP
