--- a/payment.html
+++ b/payment.html
@@ -1330,7 +1330,7 @@
     <div id="offers">
         <nav id="navbar">
             <div id="logo">
-                <a href="homepg.html"><img src="img/logo-f38397447048ccba047af6980364e92e.svg" alt="Zoom_Car" /></a>
+                <a href="index.html"><img src="img/logo-f38397447048ccba047af6980364e92e.svg" alt="Zoom_Car" /></a>
             </div>
             <ul id="nav_ul">
                 <li class="item hov">
@@ -1993,7 +1993,7 @@
         localStorage.setItem("users", JSON.stringify(s_arr));
 
         alert("YOU ARE SUCESSFULLY SIGNUP TO ZOOMCAR");
-        window.location.href = "homepg.html";
+        window.location.href = "index.html";
     }
 
     //LOGIN AFTERCLICK IN POPUP
@@ -2296,7 +2296,7 @@
 
     function showcod(){
         alert("You Need to Pay Booking Amount Before The Date Of Journey Start At The Starting Location");
-        window.location.href="homepg.html"
+        window.location.href="index.html"
     }
 
     
@@ -2323,7 +2323,7 @@
          e.prevent()
      }else{
          alert("Your Payment Done Successfully!");
-         window.location.href="homepg.html"
+         window.location.href="index.html"
      }
 
     }
