--- a/search.html
+++ b/search.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Search</title>
     <style>
+      * {
+        margin: 0%;
+        padding: 0%;
+        font-family: "Open Sans", -apple-system, BlinkMacSystemFont, Segoe UI,
+          Helvetica, Arial, sans-serif !important;
+      }
       #selectbar {
         display: flex;
         margin: 30px 100px;
