--- a/ser_2.html
+++ b/ser_2.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PICKUP TIME</title>
     <style>
+      *{ 
+       
+            font-family: "Open Sans", -apple-system, BlinkMacSystemFont, Segoe UI,
+                Helvetica, Arial, sans-serif !important;
+      }       
       #selectbar {
         display: flex;
         margin: 30px 100px;
@@ -189,7 +194,7 @@
        font-family: helvetica;
        width: 190px;
      }
-
+ 
 
      input[type=time]::-webkit-datetime-edit-fields-wrapper {
        display: flex;
