--- a/zoomcar/index.html
+++ b/zoomcar/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Zoom Car</title>
   <script src="https://kit.fontawesome.com/15707e82f8.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="../index/index.css">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
           <a href="#"><img src="img/logo-f38397447048ccba047af6980364e92e.svg" alt="Zoom_Car" /></a>
         </div>
         <ul id="nav_ul">
-          <li class="item"><a href="offers.html">OFFERS</a></li>
+          <li class="item"><a href="../offers/offers.html">OFFERS</a></li>
           <li class="item hov">
             <a href="#">SUBSCRIPTION</a>
             <div class="details" id="sub_det_item">
@@ -96,7 +96,7 @@
             </select>
           </h3>
           <div id="journey">
-            <a href="search.html">Start your wonderful journey <img src="img/next.png" alt="" />
+            <a href="../search/search.html">Start your wonderful journey <img src="img/next.png" alt="" />
             </a>
           </div>
         </div>
