--- a/zoomcar/offers/offers.html
+++ b/zoomcar/offers/offers.html
@@ -13,7 +13,7 @@
     <div id="offers">
       <nav id="navbar">
         <div id="logo">
-          <a href="index.html"><img src="img/logo-f38397447048ccba047af6980364e92e.svg" alt="Zoom_Car" /></a>
+          <a href="../index.html"><img src="img/logo-f38397447048ccba047af6980364e92e.svg" alt="Zoom_Car" /></a>
         </div>
         <ul id="nav_ul">
           <li class="item hov">
@@ -257,7 +257,7 @@
 </div>
 <div id="searching_box">
     <div id="journey">
-            <a href="search.html">Start your wonderful journey <img src="img/next.png" alt="" />
+            <a href="../search/search.html">Start your wonderful journey <img src="img/next.png" alt="" />
             </a>
           </div>
 </div>
