images path updated

--- a/zoomcar/payment/payment.html
+++ b/zoomcar/payment/payment.html
@@ -15,7 +15,7 @@
     <div id="offers">
         <nav id="navbar">
             <div id="logo">
-                <a href="../index.html"><img src="img/logo-f38397447048ccba047af6980364e92e.svg" alt="Zoom_Car" /></a>
+                <a href="../index.html"><img src="../img/logo-f38397447048ccba047af6980364e92e.svg" alt="Zoom_Car" /></a>
             </div>
             <ul id="nav_ul">
                 <li class="item hov">
@@ -63,12 +63,12 @@
                                 <a href="https://play.google.com/store/apps/details?id=com.zoomcar&referrer=utm_source%3Dhome%2520page%26utm_medium%3Dheader%2520links%26utm_content%3Dandroid%26utm_campaign%3Dinstalls"
                                     class="mob_anc">
                                     <div class="mob1">
-                                        <img src="img/g_play_logo2.png" alt="">Google Play
+                                        <img src="../img/g_play_logo2.png" alt="">Google Play
                                     </div>
                                 </a>
                                 <a href="https://apps.apple.com/us/app/zoomcar-self-drive-cars/id889910218?utm_campaign=installs&utm_content=iOS&utm_medium=header%20links&utm_source=home%20page"
                                     class="mob_anc">
-                                    <div class="mob2"><img src="img/apple_log.png" alt="">Apple Store</div>
+                                    <div class="mob2"><img src="../img/apple_log.png" alt="">Apple Store</div>
                                 </a>
                             </div>
                         </div>
