--- a/zoomcar/summary/summarypg.html
+++ b/zoomcar/summary/summarypg.html
@@ -123,7 +123,7 @@
                         <div class="slide">
                             <div id="zoomPromo3">
                                 <div class="zc_1">
-                                    <img src="img/pro1.png" alt="" />
+                                    <img src="../img/pro1.png" alt="" />
                                 </div>
                                 <h2>Refer &amp; Earn</h2>
                                 <p>
@@ -145,7 +145,7 @@
                 <div class="log_right">
                     <div class="log_r_top">
                         <div class="log_r_top_logo">
-                            <img src="img/zoom-logo-color.png" alt="">
+                            <img src="../img/zoom-logo-color.png" alt="">
                         </div>
                         <div class="log_r_top_cont">
                             <label for="">Continue with</label>
@@ -188,7 +188,7 @@
                         <div class="slide22 first2">
                             <div id="zoomPromo12">
                                 <div class="zc_12">
-                                    <img src="img/promo-3.fuel.png" alt="" />
+                                    <img src="../img/promo-3.fuel.png" alt="" />
                                 </div>
                                 <h2>Free Fuel</h2>
                                 <p>
@@ -201,7 +201,7 @@
                         <div class="slide22">
                             <div id="zoomPromo22">
                                 <div class="zc_12">
-                                    <img src="img/super_log-removebg-preview.png" alt="" />
+                                    <img src="../img/super_log-removebg-preview.png" alt="" />
                                 </div>
                                 <h2>Supermiler Club</h2>
                                 <p>
@@ -212,7 +212,7 @@
                         <div class="slide22">
                             <div id="zoomPromo32">
                                 <div class="zc_12">
-                                    <img src="img/pro1.png" alt="" />
+                                    <img src="../img/pro1.png" alt="" />
                                 </div>
                                 <h2>Refer &amp; Earn</h2>
                                 <p>
@@ -234,7 +234,7 @@
                 <div class="log_right2">
                     <div class="log_r_top2">
                         <div class="log_r_top_logo2">
-                            <img src="img/zoom-logo-color.png" alt="">
+                            <img src="../img/zoom-logo-color.png" alt="">
                         </div>
                         <div class="log_r_top_cont2">
                             <label for="">Continue with your</label>
@@ -367,30 +367,30 @@
         <div class="footer">
             <div class="Button">
                 <button id="1" onmouseover="changeColor(1)" onmouseout="initial(1)"><a class="link" href=""><img
-                            src="img/Question logo.svg" alt="How Zoomcar works" width="50px" height="50px"
-                            data-src="/build/img/zc-works.2adcbe18edb84c7c1fdf0c8d6c894f8b.svg"
-                            src="/build/img/zc-works.2adcbe18edb84c7c1fdf0c8d6c894f8b.svg">
+                            src="../img/Question logo.svg" alt="How Zoomcar works" width="50px" height="50px"
+                            data-src="../img/zc-works.2adcbe18edb84c7c1fdf0c8d6c894f8b.svg"
+                            src="../img/zc-works.2adcbe18edb84c7c1fdf0c8d6c894f8b.svg">
                     </a>
                     <p id="p1">How zoomcar works?</p>
                 </button>
                 <button id="2" onmouseover="changeColor(2)" onmouseout="initial(2)"><a class="link" href=""><img
-                            src="img/policies.svg" alt="How Zoomcar Policies" width="50px" height="50px"
-                            data-src="/build/img/policies.ceddb15a4eef16af85ba8666b1522741.svg"
-                            src="/build/img/policies.ceddb15a4eef16af85ba8666b1522741.svg">
+                            src="../img/policies.svg" alt="How Zoomcar Policies" width="50px" height="50px"
+                            data-src="../img/policies.ceddb15a4eef16af85ba8666b1522741.svg"
+                            src="../img/policies.ceddb15a4eef16af85ba8666b1522741.svg">
                     </a>
                     <p id="p2">Policies</p>
                 </button>
                 <button id="3" onmouseover="changeColor(3)" onmouseout="initial(3)"><a class="link" href=""><img
-                            src="img/help-support.svg" alt="Help Support" width="50px" height="50px"
-                            data-src="/build/img/help-support.acf244c0683e201bd2d978f1ddc5d33d.svg"
-                            src="/build/img/help-support.acf244c0683e201bd2d978f1ddc5d33d.svg">
+                            src="../img/help-support.svg" alt="Help Support" width="50px" height="50px"
+                            data-src="../img/help-support.acf244c0683e201bd2d978f1ddc5d33d.svg"
+                            src="../img/help-support.acf244c0683e201bd2d978f1ddc5d33d.svg">
                     </a>
                     <p id="p3">Help Support</p>
                 </button>
                 <button id="4" onmouseover="changeColor(4)" onmouseout="initial(4)"><a class="link" href=""><img
-                            src="img/safety.svg" alt="Zoom Safety" width="50px" height="50px"
-                            data-src="/build/img/safety.127607759cd86e3d75f5698a641d5b83.svg"
-                            src="/build/img/safety.127607759cd86e3d75f5698a641d5b83.svg">
+                            src="../img/safety.svg" alt="Zoom Safety" width="50px" height="50px"
+                            data-src="../img/safety.127607759cd86e3d75f5698a641d5b83.svg"
+                            src="../img/safety.127607759cd86e3d75f5698a641d5b83.svg">
                     </a>
                     <p id="p4">Zoom in Safety</p>
                 </button>
@@ -493,27 +493,27 @@
                 <div class="social">
                     <a class="link" href="https://www.facebook.com/zoomcar.in?ref=hl" rel="nofollow" target="_blank"
                         title="Connect with us on Facebook!">
-                        <img src="img/FB logo.svg" alt="zoomcar-facebook"
-                            data-src="/build/img/FB.71c8c954ebf0a73be3a2fa723bd62747.svg"></a>
+                        <img src="../img/FB logo.svg" alt="zoomcar-facebook"
+                            data-src="../img/FB.71c8c954ebf0a73be3a2fa723bd62747.svg"></a>
                     <a class="link" href="https://twitter.com/ZoomCarIndia" rel="nofollow" target="_blank"
                         title="Follow us on Twitter!">
-                        <img src="img/Twitter.svg" alt="zoomcar-twitter" class="lazy-img"
-                            data-src="/build/img/Twitter_2.1fcd40979beb7132d30c04e19c76deab.svg"></a>
+                        <img src="../img/Twitter.svg" alt="zoomcar-twitter" class="lazy-img"
+                            data-src="../img/Twitter_2.1fcd40979beb7132d30c04e19c76deab.svg"></a>
                     <a class="link" href="https://www.instagram.com/zoomcar_india/" rel="nofollow" target="_blank"
                         title="Follow us on Instagram!">
-                        <img src="img/Instagram logo.svg" alt="zoomcar-instagram"
-                            data-src="/build/img/Insta.aa7386bfed43a8acf0551e8c276b559f.svg"></a>
+                        <img src="../img/Instagram logo.svg" alt="zoomcar-instagram"
+                            data-src="../img/Insta.aa7386bfed43a8acf0551e8c276b559f.svg"></a>
                     <a class="link" href="https://www.youtube.com/channel/UCIX42GaSQ6S_1RMwNfO-DYA/" rel="nofollow"
                         target="_blank" title="Youtube"><img src="img/Youtube.svg" alt="zoomcar-twitter"
-                            class="lazy-img" data-src="/build/img/Youtube.44df3b5bfd3ac80cf0d292928e29dd89.svg"></a>
+                            class="lazy-img" data-src="../img/Youtube.44df3b5bfd3ac80cf0d292928e29dd89.svg"></a>
                     <a class="link" href="https://www.zoomcar.com/blog/" rel="nofollow" target="_blank"
                         title="Catch up with us on our Blog!">
-                        <img src="img/Blog.svg" alt="zoomcar-blog"
-                            data-src="/build/img/Blog_2.d0a034e8ec8e3ba6897a6d3b3de13e27.svg"></a>
+                        <img src="../img/Blog.svg" alt="zoomcar-blog"
+                            data-src="../img/Blog_2.d0a034e8ec8e3ba6897a6d3b3de13e27.svg"></a>
                     <a class="link" href="https://in.linkedin.com/company/zoomcar-india-pvt-ltd-" rel="nofollow"
                         target="_blank" title="Follow us on LinkedIn!">
-                        <img src="img/LinkdIn.svg" alt="zoomcar-linkedIn"
-                            data-src="/build/img/LinkdIn.660ed09532750dce008ff1d3543e3d0d.svg"></a>
+                        <img src="../img/LinkdIn.svg" alt="zoomcar-linkedIn"
+                            data-src="../img/LinkdIn.660ed09532750dce008ff1d3543e3d0d.svg"></a>
                 </div>
                 <p>© Copyright 2017 Zoomcar India Private Ltd. All rights reserved.</p>
             </div>
