Updated Image Path

--- a/zoomcar/offers/offers.html
+++ b/zoomcar/offers/offers.html
@@ -13,7 +13,7 @@
     <div id="offers">
       <nav id="navbar">
         <div id="logo">
-          <a href="../index.html"><img src="img/logo-f38397447048ccba047af6980364e92e.svg" alt="Zoom_Car" /></a>
+          <a href="../index.html"><img src="../img/logo-f38397447048ccba047af6980364e92e.svg" alt="Zoom_Car" /></a>
         </div>
         <ul id="nav_ul">
           <li class="item hov">
@@ -57,12 +57,12 @@
                   <a href="https://play.google.com/store/apps/details?id=com.zoomcar&referrer=utm_source%3Dhome%2520page%26utm_medium%3Dheader%2520links%26utm_content%3Dandroid%26utm_campaign%3Dinstalls"
                     class="mob_anc">
                     <div class="mob1">
-                      <img src="img/g_play_logo2.png" alt="">Google Play
+                      <img src="../img/g_play_logo2.png" alt="">Google Play
                     </div>
                   </a>
                   <a href="https://apps.apple.com/us/app/zoomcar-self-drive-cars/id889910218?utm_campaign=installs&utm_content=iOS&utm_medium=header%20links&utm_source=home%20page"
                     class="mob_anc">
-                    <div class="mob2"><img src="img/apple_log.png" alt="">Apple Store</div>
+                    <div class="mob2"><img src="../img/apple_log.png" alt="">Apple Store</div>
                   </a>
                 </div>
               </div>
@@ -93,7 +93,7 @@
               <div class="slide first">
                 <div id="zoomPromo1">
                   <div class="zc_1">
-                    <img src="img/promo-3.fuel.png" alt="" />
+                    <img src="../img/promo-3.fuel.png" alt="" />
                   </div>
                   <h2>Free Fuel</h2>
                   <p>
@@ -106,7 +106,7 @@
               <div class="slide">
                 <div id="zoomPromo2">
                   <div class="zc_1">
-                    <img src="img/super_log-removebg-preview.png" alt="" />
+                    <img src="../img/super_log-removebg-preview.png" alt="" />
                   </div>
                   <h2>Supermiler Club</h2>
                   <p>
@@ -117,7 +117,7 @@
               <div class="slide">
                 <div id="zoomPromo3">
                   <div class="zc_1">
-                    <img src="img/pro1.png" alt="" />
+                    <img src="../img/pro1.png" alt="" />
                   </div>
                   <h2>Refer &amp; Earn</h2>
                   <p>
@@ -139,7 +139,7 @@
           <div class="log_right">
             <div class="log_r_top">
               <div class="log_r_top_logo">
-                <img src="img/zoom-logo-color.png" alt="">
+                <img src="../img/zoom-logo-color.png" alt="">
               </div>
               <div class="log_r_top_cont">
                 <label for="">Continue with</label>
@@ -182,7 +182,7 @@
               <div class="slide22 first2">
                 <div id="zoomPromo12">
                   <div class="zc_12">
-                    <img src="img/promo-3.fuel.png" alt="" />
+                    <img src="../img/promo-3.fuel.png" alt="" />
                   </div>
                   <h2>Free Fuel</h2>
                   <p>
@@ -195,7 +195,7 @@
               <div class="slide22">
                 <div id="zoomPromo22">
                   <div class="zc_12">
-                    <img src="img/super_log-removebg-preview.png" alt="" />
+                    <img src="../img/super_log-removebg-preview.png" alt="" />
                   </div>
                   <h2>Supermiler Club</h2>
                   <p>
@@ -206,7 +206,7 @@
               <div class="slide22">
                 <div id="zoomPromo32">
                   <div class="zc_12">
-                    <img src="img/pro1.png" alt="" />
+                    <img src="../img/pro1.png" alt="" />
                   </div>
                   <h2>Refer &amp; Earn</h2>
                   <p>
@@ -228,7 +228,7 @@
           <div class="log_right2">
             <div class="log_r_top2">
               <div class="log_r_top_logo2">
-                <img src="img/zoom-logo-color.png" alt="">
+                <img src="../img/zoom-logo-color.png" alt="">
               </div>
               <div class="log_r_top_cont2">
                 <label for="">Continue with your</label>
@@ -257,7 +257,7 @@
 </div>
 <div id="searching_box">
     <div id="journey">
-            <a href="../search/search.html">Start your wonderful journey <img src="img/next.png" alt="" />
+            <a href="../search/search.html">Start your wonderful journey <img src="../img/next.png" alt="" />
             </a>
           </div>
 </div>
@@ -266,35 +266,35 @@
     <hr id="hr_line">
     <div id="grid_front_off_pg">
         <div class="grid_box_off">
-            <img src="img/offer1.jpg" alt="">
+            <img src="../img/offer1.jpg" alt="">
             <div class="bot_off">
                 <div class="promo_div_off">Promo Code:<b> reschedule10</b> </div>
                 <div class="valid_div_off">Validity:<b> 20 Jun, 2021</b></div>
             </div>
         </div>
         <div class="grid_box_off">
-            <img src="img/offer2.jpg" alt="">
+            <img src="../img/offer2.jpg" alt="">
             <div class="bot_off">
                 <div class="promo_div_off">Promo Code:<b> alzoomoyo</b> </div>
                 <div class="valid_div_off">Validity:<b> 31 Aug, 2021</b></div>
             </div>
         </div>
         <div class="grid_box_off">
-            <img src="img/offer3.jpg" alt="">
+            <img src="../img/offer3.jpg" alt="">
             <div class="bot_off">
                 <div class="promo_div_off">Promo Code:<b> alzoomjoy</b> </div>
                 <div class="valid_div_off">Validity:<b> 30 Jun, 2021</b></div>
             </div>
         </div>
         <div class="grid_box_off">
-            <img src="img/offer4.jpg" alt="">
+            <img src="../img/offer4.jpg" alt="">
             <div class="bot_off">
                 <div class="promo_div_off">Promo Code:<b> alzoomfit</b> </div>
                 <div class="valid_div_off">Validity:<b> 31 Jul, 2021</b></div>
             </div>
         </div>
         <div class="grid_box_off">
-            <img src="img/offer5.png" alt="">
+            <img src="../img/offer5.png" alt="">
             <div class="bot_off">
                 <div class="promo_div_off">Promo Code:<b> almcard1500</b> </div>
                 <div class="valid_div_off">Validity:<b> 31 Mar, 2022</b></div>
@@ -311,28 +311,28 @@
     <div class="footer">
       <div class="Button">
         <button id="1" onmouseover="changeColor(1)" onmouseout="initial(1)"><a class="link" href=""><img
-              src="img/Question logo.svg" alt="How Zoomcar works" width="50px" height="50px"
+              src="../img/Question logo.svg" alt="How Zoomcar works" width="50px" height="50px"
               data-src="/build/img/zc-works.2adcbe18edb84c7c1fdf0c8d6c894f8b.svg"
               src="/build/img/zc-works.2adcbe18edb84c7c1fdf0c8d6c894f8b.svg">
           </a>
           <p id="p1">How zoomcar works?</p>
         </button>
         <button id="2" onmouseover="changeColor(2)" onmouseout="initial(2)"><a class="link" href=""><img
-              src="img/policies.svg" alt="How Zoomcar Policies" width="50px" height="50px"
+              src="../img/policies.svg" alt="How Zoomcar Policies" width="50px" height="50px"
               data-src="/build/img/policies.ceddb15a4eef16af85ba8666b1522741.svg"
               src="/build/img/policies.ceddb15a4eef16af85ba8666b1522741.svg">
           </a>
           <p id="p2">Policies</p>
         </button>
         <button id="3" onmouseover="changeColor(3)" onmouseout="initial(3)"><a class="link" href=""><img
-              src="img/help-support.svg" alt="Help Support" width="50px" height="50px"
+              src="../img/help-support.svg" alt="Help Support" width="50px" height="50px"
               data-src="/build/img/help-support.acf244c0683e201bd2d978f1ddc5d33d.svg"
               src="/build/img/help-support.acf244c0683e201bd2d978f1ddc5d33d.svg">
           </a>
           <p id="p3">Help Support</p>
         </button>
         <button id="4" onmouseover="changeColor(4)" onmouseout="initial(4)"><a class="link" href=""><img
-              src="img/safety.svg" alt="Zoom Safety" width="50px" height="50px"
+              src="../img/safety.svg" alt="Zoom Safety" width="50px" height="50px"
               data-src="/build/img/safety.127607759cd86e3d75f5698a641d5b83.svg"
               src="/build/img/safety.127607759cd86e3d75f5698a641d5b83.svg">
           </a>
@@ -419,26 +419,26 @@
         <div class="social">
           <a class="link" href="https://www.facebook.com/zoomcar.in?ref=hl" rel="nofollow" target="_blank"
             title="Connect with us on Facebook!">
-            <img src="img/FB logo.svg" alt="zoomcar-facebook"
+            <img src="../img/FB logo.svg" alt="zoomcar-facebook"
               data-src="/build/img/FB.71c8c954ebf0a73be3a2fa723bd62747.svg"></a>
           <a class="link" href="https://twitter.com/ZoomCarIndia" rel="nofollow" target="_blank"
             title="Follow us on Twitter!">
-            <img src="img/Twitter.svg" alt="zoomcar-twitter" class="lazy-img"
+            <img src="../img/Twitter.svg" alt="zoomcar-twitter" class="lazy-img"
               data-src="/build/img/Twitter_2.1fcd40979beb7132d30c04e19c76deab.svg"></a>
           <a class="link" href="https://www.instagram.com/zoomcar_india/" rel="nofollow" target="_blank"
             title="Follow us on Instagram!">
-            <img src="img/Instagram logo.svg" alt="zoomcar-instagram"
+            <img src="../img/Instagram logo.svg" alt="zoomcar-instagram"
               data-src="/build/img/Insta.aa7386bfed43a8acf0551e8c276b559f.svg"></a>
           <a class="link" href="https://www.youtube.com/channel/UCIX42GaSQ6S_1RMwNfO-DYA/" rel="nofollow"
-            target="_blank" title="Youtube"><img src="img/Youtube.svg" alt="zoomcar-twitter" class="lazy-img"
+            target="_blank" title="Youtube"><img src="../img/Youtube.svg" alt="zoomcar-twitter" class="lazy-img"
               data-src="/build/img/Youtube.44df3b5bfd3ac80cf0d292928e29dd89.svg"></a>
           <a class="link" href="https://www.zoomcar.com/blog/" rel="nofollow" target="_blank"
             title="Catch up with us on our Blog!">
-            <img src="img/Blog.svg" alt="zoomcar-blog"
+            <img src="../img/Blog.svg" alt="zoomcar-blog"
               data-src="/build/img/Blog_2.d0a034e8ec8e3ba6897a6d3b3de13e27.svg"></a>
           <a class="link" href="https://in.linkedin.com/company/zoomcar-india-pvt-ltd-" rel="nofollow" target="_blank"
             title="Follow us on LinkedIn!">
-            <img src="img/LinkdIn.svg" alt="zoomcar-linkedIn"
+            <img src="../img/LinkdIn.svg" alt="zoomcar-linkedIn"
               data-src="/build/img/LinkdIn.660ed09532750dce008ff1d3543e3d0d.svg"></a>
         </div>
         <p>© Copyright 2017 Zoomcar India Private Ltd. All rights reserved.</p>
