--- a/zoomcar/index.html
+++ b/zoomcar/index.html
@@ -15,10 +15,10 @@
     <div id="home">
       <nav id="navbar">
         <div id="logo">
-          <a href="#"><img src="img/logo-f38397447048ccba047af6980364e92e.svg" alt="Zoom_Car" /></a>
+          <a href="#"><img src="./img/logo-f38397447048ccba047af6980364e92e.svg" alt="Zoom_Car" /></a>
         </div>
         <ul id="nav_ul">
-          <li class="item"><a href="../offers/offers.html">OFFERS</a></li>
+          <li class="item"><a href="./offers/offers.html">OFFERS</a></li>
           <li class="item hov">
             <a href="#">SUBSCRIPTION</a>
             <div class="details" id="sub_det_item">
@@ -96,7 +96,7 @@
             </select>
           </h3>
           <div id="journey">
-            <a href="../search/search.html">Start your wonderful journey <img src="./img/next.png" alt="" />
+            <a href="./search/search.html">Start your wonderful journey <img src="./img/next.png" alt="" />
             </a>
           </div>
         </div>
@@ -498,7 +498,7 @@
       <div class="store">
         <a data-src="./img/google_play.238b318d8ac107d46226f4c40f3aae9b.png"
           href="https://play.google.com/store/apps/details?id=com.zoomcar&amp;referrer=utm_source%3DHomepage%26utm_medium%3DBanner%26utm_campaign%3DApr2015"
-          style="background-image: url(&quot;/img/google_playstore.png&quot;);"></a>
+          style="background-image: url(&quot;./img/google_playstore.png&quot;);"></a>
 
         <a data-src="./img/apple_store.958abff9e074193ff35f2aa40e13cb98.png"
           href="https://click.google-analytics.com/redirect?tid=UA-38347989-3&amp;url=https%3A%2F%2Fitunes.apple.com%2Fus%2Fapp%2Fzoomcar-self-drive-cars%2Fid889910218%3Fmt%3D8&amp;aid=com.zoomcar.ZoomCar&amp;idfa=none&amp;cs=Homepage&amp;cm=Banner&amp;cn=Apr2015"
@@ -697,29 +697,29 @@
       <div class="Button">
         <button id="1" onmouseover="changeColor(1)" onmouseout="initial(1)"><a class="link" href=""><img
               src="./img/Question logo.svg" alt="How Zoomcar works" width="50px" height="50px"
-              data-src="/build/img/zc-works.2adcbe18edb84c7c1fdf0c8d6c894f8b.svg"
-              src="/build/img/zc-works.2adcbe18edb84c7c1fdf0c8d6c894f8b.svg">
+              data-src="./img/zc-works.2adcbe18edb84c7c1fdf0c8d6c894f8b.svg"
+              src="./img/zc-works.2adcbe18edb84c7c1fdf0c8d6c894f8b.svg">
           </a>
           <p id="p1">How zoomcar works?</p>
         </button>
         <button id="2" onmouseover="changeColor(2)" onmouseout="initial(2)"><a class="link" href=""><img
               src="./img/policies.svg" alt="How Zoomcar Policies" width="50px" height="50px"
-              data-src="/build/img/policies.ceddb15a4eef16af85ba8666b1522741.svg"
-              src="/build/img/policies.ceddb15a4eef16af85ba8666b1522741.svg">
+              data-src="./img/policies.ceddb15a4eef16af85ba8666b1522741.svg"
+              src="./img/policies.ceddb15a4eef16af85ba8666b1522741.svg">
           </a>
           <p id="p2">Policies</p>
         </button>
         <button id="3" onmouseover="changeColor(3)" onmouseout="initial(3)"><a class="link" href=""><img
               src="./img/help-support.svg" alt="Help Support" width="50px" height="50px"
-              data-src="/build/img/help-support.acf244c0683e201bd2d978f1ddc5d33d.svg"
-              src="/build/img/help-support.acf244c0683e201bd2d978f1ddc5d33d.svg">
+              data-src="./img/help-support.acf244c0683e201bd2d978f1ddc5d33d.svg"
+              src="./img/help-support.acf244c0683e201bd2d978f1ddc5d33d.svg">
           </a>
           <p id="p3">Help Support</p>
         </button>
         <button id="4" onmouseover="changeColor(4)" onmouseout="initial(4)"><a class="link" href=""><img
               src="./img/safety.svg" alt="Zoom Safety" width="50px" height="50px"
-              data-src="/build/img/safety.127607759cd86e3d75f5698a641d5b83.svg"
-              src="/build/img/safety.127607759cd86e3d75f5698a641d5b83.svg">
+              data-src="./img/safety.127607759cd86e3d75f5698a641d5b83.svg"
+              src="./img/safety.127607759cd86e3d75f5698a641d5b83.svg">
           </a>
           <p id="p4">Zoom in Safety</p>
         </button>
@@ -805,26 +805,26 @@
           <a class="link" href="https://www.facebook.com/zoomcar.in?ref=hl" rel="nofollow" target="_blank"
             title="Connect with us on Facebook!">
             <img src="./img/FB logo.svg" alt="zoomcar-facebook"
-              data-src="/build/img/FB.71c8c954ebf0a73be3a2fa723bd62747.svg"></a>
+              data-src="./img/FB.71c8c954ebf0a73be3a2fa723bd62747.svg"></a>
           <a class="link" href="https://twitter.com/ZoomCarIndia" rel="nofollow" target="_blank"
             title="Follow us on Twitter!">
             <img src="./img/Twitter.svg" alt="zoomcar-twitter" class="lazy-img"
-              data-src="/build/img/Twitter_2.1fcd40979beb7132d30c04e19c76deab.svg"></a>
+              data-src="./img/Twitter_2.1fcd40979beb7132d30c04e19c76deab.svg"></a>
           <a class="link" href="https://www.instagram.com/zoomcar_india/" rel="nofollow" target="_blank"
             title="Follow us on Instagram!">
             <img src="./img/Instagram logo.svg" alt="zoomcar-instagram"
-              data-src="/build/img/Insta.aa7386bfed43a8acf0551e8c276b559f.svg"></a>
+              data-src="./img/Insta.aa7386bfed43a8acf0551e8c276b559f.svg"></a>
           <a class="link" href="https://www.youtube.com/channel/UCIX42GaSQ6S_1RMwNfO-DYA/" rel="nofollow"
             target="_blank" title="Youtube"><img src="./img/Youtube.svg" alt="zoomcar-twitter" class="lazy-img"
-              data-src="/build/img/Youtube.44df3b5bfd3ac80cf0d292928e29dd89.svg"></a>
+              data-src="./img/Youtube.44df3b5bfd3ac80cf0d292928e29dd89.svg"></a>
           <a class="link" href="https://www.zoomcar.com/blog/" rel="nofollow" target="_blank"
             title="Catch up with us on our Blog!">
             <img src="./img/Blog.svg" alt="zoomcar-blog"
-              data-src="/build/img/Blog_2.d0a034e8ec8e3ba6897a6d3b3de13e27.svg"></a>
+              data-src="./img/Blog_2.d0a034e8ec8e3ba6897a6d3b3de13e27.svg"></a>
           <a class="link" href="https://in.linkedin.com/company/zoomcar-india-pvt-ltd-" rel="nofollow" target="_blank"
             title="Follow us on LinkedIn!">
             <img src="./img/LinkdIn.svg" alt="zoomcar-linkedIn"
-              data-src="/build/img/LinkdIn.660ed09532750dce008ff1d3543e3d0d.svg"></a>
+              data-src="./img/LinkdIn.660ed09532750dce008ff1d3543e3d0d.svg"></a>
         </div>
         <p>© Copyright 2017 Zoomcar India Private Ltd. All rights reserved.</p>
       </div>
