--- a/zoomcar/bookingpage/bookingPage.html
+++ b/zoomcar/bookingpage/bookingPage.html
@@ -273,7 +273,7 @@
 <div id="detailGrid">
 
   <div class="carImage">
-    <img src="img/ciaz.png" id="car_img_1"/>
+    <img src="../img/ciaz.png" id="car_img_1"/>
   </div>
   <div class="carDetails">
     <div>
