--- a/zoomcar/summary/summarypg.html
+++ b/zoomcar/summary/summarypg.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/15707e82f8.js" crossorigin="anonymous"></script>
     <title>Summary</title>
-  <link rel="stylesheet" href="bookingPage.css">
+  <link rel="stylesheet" href="summarypg.css">
 </head>
 <body>
     <div id="offers">
