--- a/payment/payment.html
+++ b/payment/payment.html
@@ -99,7 +99,7 @@
                         <div class="slide first">
                             <div id="zoomPromo1">
                                 <div class="zc_1">
-                                    <img src="img/promo-3.fuel.png" alt="" />
+                                    <img src="../img/promo-3.fuel.png" alt="" />
                                 </div>
                                 <h2>Free Fuel</h2>
                                 <p>
@@ -112,7 +112,7 @@
                         <div class="slide">
                             <div id="zoomPromo2">
                                 <div class="zc_1">
-                                    <img src="img/super_log-removebg-preview.png" alt="" />
+                                    <img src="../img/super_log-removebg-preview.png" alt="" />
                                 </div>
                                 <h2>Supermiler Club</h2>
                                 <p>
@@ -123,7 +123,7 @@
                         <div class="slide">
                             <div id="zoomPromo3">
                                 <div class="zc_1">
-                                    <img src="img/pro1.png" alt="" />
+                                    <img src="../img/pro1.png" alt="" />
                                 </div>
                                 <h2>Refer &amp; Earn</h2>
                                 <p>
@@ -145,24 +145,14 @@
                 <div class="log_right">
                     <div class="log_r_top">
                         <div class="log_r_top_logo">
-                            <img src="img/zoom-logo-color.png" alt="">
+                            <img src="../img/zoom-logo-color.png" alt="">
                         </div>
                         <div class="log_r_top_cont">
                             <label for="">Continue with</label>
-                            <a
-                                href="https://www.facebook.com/login.php?skip_api_login=1&api_key=194504380711275&kid_directed_site=0&app_id=194504380711275&signed_next=1&next=https%3A%2F%2Fwww.facebook.com%2Fv2.8%2Fdialog%2Foauth%3Fapp_id%3D194504380711275%26cbt%3D1622385494561%26channel_url%3Dhttps%253A%252F%252Fstaticxx.facebook.com%252Fx%252Fconnect%252Fxd_arbiter%252F%253Fversion%253D46%2523cb%253Dfd7eb5e6eafb3%2526domain%253Dwww.zoomcar.com%2526origin%253Dhttps%25253A%25252F%25252Fwww.zoomcar.com%25252Ff2bf161617a4c58%2526relation%253Dopener%26client_id%3D194504380711275%26display%3Dpopup%26domain%3Dwww.zoomcar.com%26e2e%3D%257B%257D%26fallback_redirect_uri%3Dhttps%253A%252F%252Fwww.zoomcar.com%252Fmumbai%252F%26fx_app%3Dfacebook%26locale%3Den_US%26logger_id%3Df27e55aa28e60e4%26origin%3D1%26redirect_uri%3Dhttps%253A%252F%252Fstaticxx.facebook.com%252Fx%252Fconnect%252Fxd_arbiter%252F%253Fversion%253D46%2523cb%253Df52f349df35ed%2526domain%253Dwww.zoomcar.com%2526origin%253Dhttps%25253A%25252F%25252Fwww.zoomcar.com%25252Ff2bf161617a4c58%2526relation%253Dopener%2526frame%253Df1a91b53ea2eb04%26response_type%3Dtoken%252Csigned_request%252Cgraph_domain%26scope%3Dpublic_profile%252Cemail%26sdk%3Djoey%26version%3Dv2.8%26ret%3Dlogin%26fbapp_pres%3D0%26tp%3Dunspecified&cancel_url=https%3A%2F%2Fstaticxx.facebook.com%2Fx%2Fconnect%2Fxd_arbiter%2F%3Fversion%3D46%23cb%3Df52f349df35ed%26domain%3Dwww.zoomcar.com%26origin%3Dhttps%253A%252F%252Fwww.zoomcar.com%252Ff2bf161617a4c58%26relation%3Dopener%26frame%3Df1a91b53ea2eb04%26error%3Daccess_denied%26error_code%3D200%26error_description%3DPermissions%2Berror%26error_reason%3Duser_denied&display=popup&locale=mr_IN&pl_dbl=0">
-                                <div class="log_r_top_cont_face">Facebook</div>
-                            </a>
-
-                            <a
-                                href="https://accounts.google.com/o/oauth2/auth/oauthchooseaccount?redirect_uri=storagerelay%3A%2F%2Fhttps%2Fwww.zoomcar.com%3Fid%3Dauth976566&response_type=permission%20id_token&scope=email%20profile%20openid&openid.realm&client_id=1022741829589-ms1t8peh8j5iahb23ct46ma8uvicc7lc.apps.googleusercontent.com&ss_domain=https%3A%2F%2Fwww.zoomcar.com&fetch_basic_profile=true&gsiwebsdk=2&flowName=GeneralOAuthFlow">
-                                <div class="log_r_top_cont_gmail">Gmail</div>
-                            </a>
-
                         </div>
                     </div>
                     <div class="log_r_bot">
-                        <input type="text" placeholder="Enter your E-mail or Mobile number" class="log_input_email_mob">
+                        <input type="text" placeholder="Enter your Mobile number" class="log_input_email_mob">
                         <div class="log_r_bot_btn">
                             <button class="btn_log_sub" onclick="signinacc(event)"></button>
                         </div>
@@ -188,7 +178,7 @@
                         <div class="slide22 first2">
                             <div id="zoomPromo12">
                                 <div class="zc_12">
-                                    <img src="img/promo-3.fuel.png" alt="" />
+                                    <img src="../img/promo-3.fuel.png" alt="" />
                                 </div>
                                 <h2>Free Fuel</h2>
                                 <p>
@@ -201,7 +191,7 @@
                         <div class="slide22">
                             <div id="zoomPromo22">
                                 <div class="zc_12">
-                                    <img src="img/super_log-removebg-preview.png" alt="" />
+                                    <img src="../img/super_log-removebg-preview.png" alt="" />
                                 </div>
                                 <h2>Supermiler Club</h2>
                                 <p>
@@ -212,7 +202,7 @@
                         <div class="slide22">
                             <div id="zoomPromo32">
                                 <div class="zc_12">
-                                    <img src="img/pro1.png" alt="" />
+                                    <img src="../img/pro1.png" alt="" />
                                 </div>
                                 <h2>Refer &amp; Earn</h2>
                                 <p>
@@ -234,24 +224,14 @@
                 <div class="log_right2">
                     <div class="log_r_top2">
                         <div class="log_r_top_logo2">
-                            <img src="img/zoom-logo-color.png" alt="">
+                            <img src="../img/zoom-logo-color.png" alt="">
                         </div>
                         <div class="log_r_top_cont2">
                             <label for="">Continue with your</label>
-                            <a
-                                href="https://www.facebook.com/login.php?skip_api_login=1&api_key=194504380711275&kid_directed_site=0&app_id=194504380711275&signed_next=1&next=https%3A%2F%2Fwww.facebook.com%2Fv2.8%2Fdialog%2Foauth%3Fapp_id%3D194504380711275%26cbt%3D1622385494561%26channel_url%3Dhttps%253A%252F%252Fstaticxx.facebook.com%252Fx%252Fconnect%252Fxd_arbiter%252F%253Fversion%253D46%2523cb%253Dfd7eb5e6eafb3%2526domain%253Dwww.zoomcar.com%2526origin%253Dhttps%25253A%25252F%25252Fwww.zoomcar.com%25252Ff2bf161617a4c58%2526relation%253Dopener%26client_id%3D194504380711275%26display%3Dpopup%26domain%3Dwww.zoomcar.com%26e2e%3D%257B%257D%26fallback_redirect_uri%3Dhttps%253A%252F%252Fwww.zoomcar.com%252Fmumbai%252F%26fx_app%3Dfacebook%26locale%3Den_US%26logger_id%3Df27e55aa28e60e4%26origin%3D1%26redirect_uri%3Dhttps%253A%252F%252Fstaticxx.facebook.com%252Fx%252Fconnect%252Fxd_arbiter%252F%253Fversion%253D46%2523cb%253Df52f349df35ed%2526domain%253Dwww.zoomcar.com%2526origin%253Dhttps%25253A%25252F%25252Fwww.zoomcar.com%25252Ff2bf161617a4c58%2526relation%253Dopener%2526frame%253Df1a91b53ea2eb04%26response_type%3Dtoken%252Csigned_request%252Cgraph_domain%26scope%3Dpublic_profile%252Cemail%26sdk%3Djoey%26version%3Dv2.8%26ret%3Dlogin%26fbapp_pres%3D0%26tp%3Dunspecified&cancel_url=https%3A%2F%2Fstaticxx.facebook.com%2Fx%2Fconnect%2Fxd_arbiter%2F%3Fversion%3D46%23cb%3Df52f349df35ed%26domain%3Dwww.zoomcar.com%26origin%3Dhttps%253A%252F%252Fwww.zoomcar.com%252Ff2bf161617a4c58%26relation%3Dopener%26frame%3Df1a91b53ea2eb04%26error%3Daccess_denied%26error_code%3D200%26error_description%3DPermissions%2Berror%26error_reason%3Duser_denied&display=popup&locale=mr_IN&pl_dbl=0">
-                                <div class="log_r_top_cont_face2">Facebook</div>
-                            </a>
-
-                            <a
-                                href="https://accounts.google.com/o/oauth2/auth/oauthchooseaccount?redirect_uri=storagerelay%3A%2F%2Fhttps%2Fwww.zoomcar.com%3Fid%3Dauth976566&response_type=permission%20id_token&scope=email%20profile%20openid&openid.realm&client_id=1022741829589-ms1t8peh8j5iahb23ct46ma8uvicc7lc.apps.googleusercontent.com&ss_domain=https%3A%2F%2Fwww.zoomcar.com&fetch_basic_profile=true&gsiwebsdk=2&flowName=GeneralOAuthFlow">
-                                <div class="log_r_top_cont_gmail2">Gmail</div>
-                            </a>
-
                         </div>
                     </div>
                     <div class="log_r_bot2">
-                        <input type="text" placeholder="Enter your E-mail or Mobile number"
+                        <input type="text" placeholder="Enter your Mobile number"
                             class="log_input_email_mob2">
                         <div class="log_r_bot_btn2">
                             <button class="btn_log_sub2" onclick="loginacc(event)"></button>
@@ -321,7 +301,7 @@
         <div id="sumry">
             <div id="top_w_img">
                 <p class="heading_sumry">SUMMARY</p>
-                <img src="img/sum_car_img.png" alt="" id="right_car">
+                <img src="../img/sum_car_img.png" alt="" id="right_car">
                 <p id="car_name">KUV 100</p>
                 <p id="seating_cap">(5 Seater)</p>
             </div>
@@ -340,7 +320,7 @@
                 </div>
             </div>
             <div id="navi_box">
-                <img src="img/navi_sum_pg.png" alt="">
+                <img src="../img/navi_sum_pg.png" alt="">
             </div>
             <div id="fr_ek_div">
                 <div id="fr_ek_lef">
@@ -354,7 +334,7 @@
             </div>
             <hr>
             <div id="fare_inc_div">
-                <img src="img/fare_inc_sum.png" alt="">
+                <img src="../img/fare_inc_sum.png" alt="">
             </div>
         </div>
     </div>
@@ -367,28 +347,28 @@
         <div class="footer">
             <div class="Button">
                 <button id="1" onmouseover="changeColor(1)" onmouseout="initial(1)"><a class="link" href=""><img
-                            src="img/Question logo.svg" alt="How Zoomcar works" width="50px" height="50px"
+                            src="../img/Question logo.svg" alt="How Zoomcar works" width="50px" height="50px"
                             data-src="/build/img/zc-works.2adcbe18edb84c7c1fdf0c8d6c894f8b.svg"
                             src="/build/img/zc-works.2adcbe18edb84c7c1fdf0c8d6c894f8b.svg">
                     </a>
                     <p id="p1">How zoomcar works?</p>
                 </button>
                 <button id="2" onmouseover="changeColor(2)" onmouseout="initial(2)"><a class="link" href=""><img
-                            src="img/policies.svg" alt="How Zoomcar Policies" width="50px" height="50px"
+                            src="../img/policies.svg" alt="How Zoomcar Policies" width="50px" height="50px"
                             data-src="/build/img/policies.ceddb15a4eef16af85ba8666b1522741.svg"
                             src="/build/img/policies.ceddb15a4eef16af85ba8666b1522741.svg">
                     </a>
                     <p id="p2">Policies</p>
                 </button>
                 <button id="3" onmouseover="changeColor(3)" onmouseout="initial(3)"><a class="link" href=""><img
-                            src="img/help-support.svg" alt="Help Support" width="50px" height="50px"
+                            src="../img/help-support.svg" alt="Help Support" width="50px" height="50px"
                             data-src="/build/img/help-support.acf244c0683e201bd2d978f1ddc5d33d.svg"
                             src="/build/img/help-support.acf244c0683e201bd2d978f1ddc5d33d.svg">
                     </a>
                     <p id="p3">Help Support</p>
                 </button>
                 <button id="4" onmouseover="changeColor(4)" onmouseout="initial(4)"><a class="link" href=""><img
-                            src="img/safety.svg" alt="Zoom Safety" width="50px" height="50px"
+                            src="../img/safety.svg" alt="Zoom Safety" width="50px" height="50px"
                             data-src="/build/img/safety.127607759cd86e3d75f5698a641d5b83.svg"
                             src="/build/img/safety.127607759cd86e3d75f5698a641d5b83.svg">
                     </a>
@@ -493,26 +473,26 @@
                 <div class="social">
                     <a class="link" href="https://www.facebook.com/zoomcar.in?ref=hl" rel="nofollow" target="_blank"
                         title="Connect with us on Facebook!">
-                        <img src="img/FB logo.svg" alt="zoomcar-facebook"
+                        <img src="../img/FB logo.svg" alt="zoomcar-facebook"
                             data-src="/build/img/FB.71c8c954ebf0a73be3a2fa723bd62747.svg"></a>
                     <a class="link" href="https://twitter.com/ZoomCarIndia" rel="nofollow" target="_blank"
                         title="Follow us on Twitter!">
-                        <img src="img/Twitter.svg" alt="zoomcar-twitter" class="lazy-img"
+                        <img src="../img/Twitter.svg" alt="zoomcar-twitter" class="lazy-img"
                             data-src="/build/img/Twitter_2.1fcd40979beb7132d30c04e19c76deab.svg"></a>
                     <a class="link" href="https://www.instagram.com/zoomcar_india/" rel="nofollow" target="_blank"
                         title="Follow us on Instagram!">
-                        <img src="img/Instagram logo.svg" alt="zoomcar-instagram"
+                        <img src="../img/Instagram logo.svg" alt="zoomcar-instagram"
                             data-src="/build/img/Insta.aa7386bfed43a8acf0551e8c276b559f.svg"></a>
                     <a class="link" href="https://www.youtube.com/channel/UCIX42GaSQ6S_1RMwNfO-DYA/" rel="nofollow"
-                        target="_blank" title="Youtube"><img src="img/Youtube.svg" alt="zoomcar-twitter"
+                        target="_blank" title="Youtube"><img src="../img/Youtube.svg" alt="zoomcar-twitter"
                             class="lazy-img" data-src="/build/img/Youtube.44df3b5bfd3ac80cf0d292928e29dd89.svg"></a>
                     <a class="link" href="https://www.zoomcar.com/blog/" rel="nofollow" target="_blank"
                         title="Catch up with us on our Blog!">
-                        <img src="img/Blog.svg" alt="zoomcar-blog"
+                        <img src="../img/Blog.svg" alt="zoomcar-blog"
                             data-src="/build/img/Blog_2.d0a034e8ec8e3ba6897a6d3b3de13e27.svg"></a>
                     <a class="link" href="https://in.linkedin.com/company/zoomcar-india-pvt-ltd-" rel="nofollow"
                         target="_blank" title="Follow us on LinkedIn!">
-                        <img src="img/LinkdIn.svg" alt="zoomcar-linkedIn"
+                        <img src="../img/LinkdIn.svg" alt="zoomcar-linkedIn"
                             data-src="/build/img/LinkdIn.660ed09532750dce008ff1d3543e3d0d.svg"></a>
                 </div>
                 <p>© Copyright 2017 Zoomcar India Private Ltd. All rights reserved.</p>
