--- a/dropoffTime/dropoffTime.html
+++ b/dropoffTime/dropoffTime.html
@@ -66,8 +66,8 @@
     </div>
     <footer id="last_nav">
       <div id="start_div_fo">
-        <div id="st1_divin">STARTING POINT</div>
-        <div id="st2_divin">Select Pick-up Location</div>
+        <div id="st1_divin">DROPPING POINT</div>
+        <div id="st2_divin">Select Drop Location</div>
         <div id="st3_divin"></div>
       </div>
       <div id="date_div_fo">
